--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             data-position="top" data-tooltip="View Varad on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
               class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="https://www.linkedin.com/in/medanimohd/"
-              class="hoverline" target="_blank">linkedin.com/in/medanimohd/</a></a>
+              class="hoverline" target="_blank">linkedin.com/in/medanimohd</a></a>
         </p>
       </div>
     </section>
