--- a/index.html
+++ b/index.html
@@ -182,6 +182,42 @@
       <h3 class="page-title white-text teal">Projects</h3>
       <div class="container">
         <div class="row">
+          <div class="col s12 m6 l6">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="music streaming app" src="/assets/img/linkedin.JPG" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">LinkedIn clone<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  LinkedIn Clone
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> HTML, CSS, JS(React), Redux, Firebase</li>
+                  <li>Sign-in/out</li>
+                  <li>Add posts</li>
+                </ul>
+                <div class="card-action">
+                  <a aria-label="Visit " href="https://linkedin-clone-c2c64.web.app/" target="_blank" data-position="top"
+                    data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-external-link"></i></a>
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/medani123/Linkedin-clone"
+                    target="_blank" data-position="top" data-tooltip="Visit the GitHub repo for  project"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
           <div class="col s12 m6 l6">
             <div class="card medium">
@@ -202,7 +238,7 @@
                     class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><b>Tools:</b> HTML, CSS, JS(React), Redux, Firebase</li>
-                  <li>Signin/out</li>
+                  <li>Sign-in/out</li>
                   <li>Browse content</li>
                 </ul>
                 <div class="card-action">
