--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                   <li>Browse content</li>
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit " href="https://netflix-app-9cbc7.web.app/" target="_blank" data-position="top"
+                  <a aria-label="Visit " href="https://netflic-challenge-clone.web.app/" target="_blank" data-position="top"
                     data-tooltip="View Online"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
