--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <li class="bold">
         
-        <a aria-label="Open Varad's resume in a new tab" href="https://drive.google.com/file/d/1Tut968hp4CRnWrBA2zVzzqlSJW4D0Ixu/view?usp=sharing" target="_blank"
+        <a aria-label="Open resume in a new tab" href="https://drive.google.com/file/d/1Tut968hp4CRnWrBA2zVzzqlSJW4D0Ixu/view?usp=sharing" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
       <hr>
@@ -118,7 +118,7 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
-        <a aria-label="Open Varad's Resume in a new tab"
+        <a aria-label="Open Resume in a new tab"
           href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
@@ -480,7 +480,7 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of  web app" src="/assets/img/BMI.JPG" style="height: 100%; width: 90%" class="activator" />
+                <img alt="Screenshot of  web app" src="/assets/img/BMI.JPG" style="height: 100%; width: 85%" class="activator" />
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">BMI calculator<i
@@ -623,23 +623,23 @@
       <div class="container">
         
         <p>
-          <a aria-label="Email Varad" href="mailto:medani.utp@gmail.com" target="_blank" data-position="top"
-            data-tooltip="Email Varad" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-envelope"></i><a aria-label="Email Varad" href="mailto:medani.utp@gmail.com"
+          <a aria-label="Email Me" href="mailto:medani.utp@gmail.com" target="_blank" data-position="top"
+            data-tooltip="Email Me" class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+              class="fa fa-envelope"></i><a aria-label="Email" href="mailto:medani.utp@gmail.com"
               class="hoverline">medani.utp@gmail.com</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on GitHub" href="https://github.com/medani123" target="_blank"
-            data-position="top" data-tooltip="View Varad on GitHub"
+          <a aria-label="View Me on GitHub" href="https://github.com/medani123" target="_blank"
+            data-position="top" data-tooltip="View Me on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Varad on Github" href="https://github.com/medani123" class="hoverline"
+              aria-label="Me on Github" href="https://github.com/medani123" class="hoverline"
               target="_blank">github.com/medani123</a></a>
         </p>
         <p>
-          <a aria-label="View Varad on LinkedIn" href="https://www.linkedin.com/in/medanimohd/" target="_blank"
-            data-position="top" data-tooltip="View Varad on LinkedIn"
+          <a aria-label="View Me on LinkedIn" href="https://www.linkedin.com/in/medanimohd/" target="_blank"
+            data-position="top" data-tooltip="View Me on LinkedIn"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-              class="fa fa-linkedin"></i><a aria-label="Varad on LinkedIn" href="https://www.linkedin.com/in/medanimohd/"
+              class="fa fa-linkedin"></i><a aria-label="Me on LinkedIn" href="https://www.linkedin.com/in/medanimohd/"
               class="hoverline" target="_blank">linkedin.com/in/medanimohd</a></a>
         </p>
       </div>
