--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                 <span class="card-title activator teal-text hoverline">Weatherly<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  Weather app to get the weather forecase based on your location.
+                  Weather app to get the weather forecast based on your location.
                 </p>
               </div>
               <div class="card-reveal">
