--- a/index.html
+++ b/index.html
@@ -197,6 +197,41 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
+                <img alt="music streaming app" src="/assets/img/google.JPG" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Google clone<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Google clone
+                </p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> HTML, Tailwind CSS, NextJS</li>
+                  <li>Search</li>
+                  <li>Browse Results</li>
+                  <li>Results will take lead to external links</li>
+                </ul>
+                <div class="card-action">
+                  <a aria-label="Visit " href="https://google-3gzs9p1x2-medani123.vercel.app/" target="_blank" data-position="top"
+                    data-tooltip="View Online"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-external-link"></i></a>
+                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/medani123/Google-Clone"
+                    target="_blank" data-position="top" data-tooltip="Visit the GitHub repo for  project"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col s12 m6 l6">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
                 <img alt="music streaming app" src="/assets/img/Discord.JPG" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
