--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <span class="card-title activator teal-text hoverline">Google clone<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  Google clone
+                  Google clone with functioning search results
                 </p>
               </div>
               <div class="card-reveal">
@@ -238,14 +238,14 @@
                 <span class="card-title activator teal-text hoverline">Discord clone<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  Discord clone 
+                  Discord clone where you can send messages 
                 </p>
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, JS(React), Redux, Firebase</li>
+                  <li><b>Tools:</b> HTML, CSS, ReactJS, Redux, Firebase</li>
                   <li>Sign-in/out</li>
                   <li>Create Channels</li>
                   <li>Send Messages</li>
@@ -270,17 +270,17 @@
                 <img alt="music streaming app" src="/assets/img/snap.JPG" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Snapchat clone<i
+                <span class="card-title activator teal-text hoverline">Snapchat clone</span><i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  Snapchat clone
+                  Snapchat clone with webcam snapshots
                 </p>
               </div>
               <div class="card-reveal">
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, JS(React), Redux, Firebase</li>
+                  <li><b>Tools:</b> HTML, CSS, ReactJS, Redux, Firebase</li>
                   <li>Sign-in/out</li>
                   <li>Snap a photo with webcam</li>
                   <li>View snaps for 10 seconds</li>
@@ -308,7 +308,7 @@
                 <span class="card-title activator teal-text hoverline">Slack clone<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p>
-                  Slack clone
+                  Slack clone where you can share your messages
                 </p>
               </div>
               <div class="card-reveal">
@@ -317,7 +317,7 @@
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, JS(React), Redux, Firebase</li>
+                  <li><b>Tools:</b> HTML, CSS styled components, ReactJS, Redux, Firebase</li>
                   <li>Sign-in/out</li>
                   <li>Add Channels</li>
                   <li>Send Messages</li>
@@ -354,7 +354,7 @@
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, JS(React), Redux, Firebase</li>
+                  <li><b>Tools:</b> HTML, CSS, ReactJS, Redux, Firebase</li>
                   <li>Sign-in/out</li>
                   <li>Add posts</li>
                 </ul>
@@ -427,7 +427,7 @@
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, JS(React), Redux, MongoDB, Postman</li>
+                  <li><b>Tools:</b> HTML, CSS, ReactJS, Redux, MongoDB, Postman</li>
                   <li>Sort Products based on price & size</li>
                   <li>Add/delete to/from cart</li>
                 </ul>
@@ -463,7 +463,7 @@
                 <span class="card-title grey-text"><small>Accomplishments</small><i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><b>Tools:</b> HTML, CSS, JS(React)</li>
+                  <li><b>Tools:</b> HTML, CSS, ReactJS</li>
                   </ul>
                 <div class="card-action">
                   
