--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
         <!-- Languages and Databases -->
         <div class="card">
           <div class="card-content">
-            <h4 class="brown-text light">Skills</h4>
+            <h4 class="black-text light">Skills</h4>
             <div class="row text-center">
               <div class="col s4 m2">
                 <img alt="" src="/assets/img/js.jpg" class="responsive-img" />JS
