--- a/index.html
+++ b/index.html
@@ -448,6 +448,40 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
+                <img alt="quiz app" src="/assets/img/tesla.JPG" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Tesla<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Tesla clone
+                </p>
+              </div>
+              <div class="card-reveal">
+                <!-- TODO: change this -- only close button -->
+                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> HTML, Styled Components, ReactJS</li>
+                  </ul>
+                  <div class="card-action">
+                    <a aria-label="Visit " href="https://tesla-clone-one.vercel.app/" target="_blank" data-position="top"
+                      data-tooltip="View Online"
+                      class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                        class="fa fa-external-link"></i></a>
+                    <a aria-label="Visit the GitHub repo for  project" href="https://github.com/medani123/Tesla-clone"
+                      target="_blank" data-position="top" data-tooltip="Visit the GitHub repo for  project"
+                      class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                        class="fa fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col s12 m6 l6">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
                 <img alt="quiz app" src="/assets/img/travel.JPG" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
@@ -475,6 +509,8 @@
               </div>
             </div>
           </div>
+
+          
 
           <div class="col s12 m6 l6">
             <div class="card medium">
