--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                   <li>Alan can open "article number" in a tew tab.</li>
                 </ul>
                 <div class="card-action">
-                  <a aria-label="Visit " href="https://voice-ai-news-uuopqrcos-medani123.vercel.app/" target="_blank" data-position="top"
+                  <a aria-label="Visit " href="https://voice-ai-news.vercel.app/" target="_blank" data-position="top"
                     data-tooltip="Try me!"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="fa fa-external-link"></i></a>
