Added IMDB movies analysis

--- a/index.html
+++ b/index.html
@@ -215,6 +215,33 @@
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
+                <img alt="music streaming app" src="/assets/img/IMDB.JPG" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">IMDB top 100 Movies Analysis (Excel)<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  IMDB top 100 Movies (Excel)
+                </p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                
+                <div class="card-action">
+                  <a aria-label="Visit " href="https://docs.google.com/spreadsheets/d/1bAfnVsLCOwpHfqDEnoNF0byTjJAPWJkD/edit?usp=sharing&ouid=110332813322065349869&rtpof=true&sd=true" target="_blank" data-position="top"
+                    data-tooltip="Try me!"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-external-link"></i></a>
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col s12 m6 l6">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
                 <img alt="music streaming app" src="/assets/img/AI.JPG" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
