--- a/index.html
+++ b/index.html
@@ -185,6 +185,39 @@
       <h3 class="page-title white-text teal">Projects</h3>
       <div class="container">
         <div class="row">
+
+          <div class="col s12 m6 l6">
+            <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light">
+                <img alt="music streaming app" src="/assets/img/bank.JPG" style="height: 100%; width: 100%" class="activator" />
+              </div>
+              <div class="card-content">
+                <span class="card-title activator teal-text hoverline">Modern Bank Website<i
+                    class="mdi-navigation-more-vert right"></i></span>
+                <p>
+                  Fully Responsive Website with Modern UI in ReacJS with Tailwind
+                </p>
+              </div>
+              <div class="card-reveal">
+                <span class="card-title grey-text"><small>Accomplishments</small><i
+                    class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><b>Tools:</b> React, Vite, Tailwind</li>
+                </ul>
+                <div class="card-action">
+                  <a aria-label="Visit " href="https://bank-medani123.vercel.app/" target="_blank" data-position="top"
+                    data-tooltip="Try me!"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-external-link"></i></a>
+                  <a aria-label="Github repository " href="https://github.com/medani123/Bank"
+                    target="_blank" data-position="top" data-tooltip="Github repository "
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="fa fa-github"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="col s12 m6 l6">
             <div class="card medium">
               <div class="card-image waves-effect waves-block waves-light">
